fix: Position fix that allows the pages to scroll on mobile

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -64,6 +64,7 @@ span {
     .HomeContents {
         width: 100%;
         border: none;
+        position: relative;
     }
 
     span {
